--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,11 +22,14 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore
+      working-directory: Demo
       run: dotnet restore
 
     - name: Build
+      working-directory: Demo
       run: dotnet build --no-restore --configuration Release
 
     - name: Test
+      working-directory: Demo
       run: dotnet test --no-build --configuration Release
 
